package io.github.c1921.pillring.ui

object UiTestTags {
    const val HOME_LOG_BUTTON = "home_log_button"
    const val HOME_SETTINGS_BUTTON = "home_settings_button"
    const val HOME_ADD_PLAN_FAB = "home_add_plan_fab"
    const val SETTINGS_BACK_BUTTON = "settings_back_button"
    const val SETTINGS_LANGUAGE_ITEM = "settings_language_item"
    const val SETTINGS_LANGUAGE_ICON = "settings_language_icon"
    const val SETTINGS_PERMISSION_ITEM = "settings_permission_item"
    const val SETTINGS_PERMISSION_ICON = "settings_permission_icon"
    const val SETTINGS_ABOUT_ITEM = "settings_about_item"
    const val SETTINGS_ABOUT_ICON = "settings_about_icon"
    const val SETTINGS_PERMISSION_PAGE = "settings_permission_page"
    const val SETTINGS_PERMISSION_TIMING_CARD = "settings_permission_timing_card"
    const val SETTINGS_ABOUT_PAGE = "settings_about_page"
    const val SETTINGS_ABOUT_VERSION_VALUE = "settings_about_version_value"
    const val SETTINGS_ABOUT_UPDATE_CARD = "settings_about_update_card"
    const val SETTINGS_ABOUT_UPDATE_BUTTON = "settings_about_update_button"
    const val SETTINGS_ABOUT_UPDATE_SUMMARY = "settings_about_update_summary"
    const val SETTINGS_LANGUAGE_OPTION_SYSTEM = "settings_language_option_system"
    const val SETTINGS_LANGUAGE_OPTION_ENGLISH = "settings_language_option_english"
    const val SETTINGS_LANGUAGE_OPTION_CHINESE = "settings_language_option_chinese"
    const val PLAN_CARD_OVERFLOW_BUTTON = "plan_card_overflow_button"
    const val PLAN_CARD_ACTION_MOVE_UP = "plan_card_action_move_up"
    const val PLAN_CARD_ACTION_MOVE_DOWN = "plan_card_action_move_down"
    const val PLAN_CARD_ACTION_DELETE = "plan_card_action_delete"
    fun planCard(planId: String): String = "plan_card_$planId"
    const val REMINDER_CONFIRM_SCREEN = "reminder_confirm_screen"
    const val REMINDER_CONFIRM_PRIMARY_BUTTON = "reminder_confirm_primary_button"
    const val REMINDER_CONFIRM_SECONDARY_CONTENT = "reminder_confirm_secondary_content"
    const val REMINDER_CONFIRM_HOLD_PROGRESS = "reminder_confirm_hold_progress"
    const val REMINDER_CONFIRM_HOLD_HINT = "reminder_confirm_hold_hint"
    const val REMINDER_LOG_SCREEN = "reminder_log_screen"
    const val REMINDER_LOG_EMPTY = "reminder_log_empty"
    const val REMINDER_LOG_ENTRY = "reminder_log_entry"

    const val PLAN_EDITOR_SELECTED_TIME = "plan_editor_selected_time"
    const val PLAN_EDITOR_SELECT_TIME_BUTTON = "plan_editor_select_time_button"
    const val PLAN_EDITOR_REPEAT_MODE_DAILY = "plan_editor_repeat_mode_daily"
    const val PLAN_EDITOR_REPEAT_MODE_INTERVAL_DAYS = "plan_editor_repeat_mode_interval_days"
    const val PLAN_EDITOR_INTERVAL_DAYS_INPUT = "plan_editor_interval_days_input"
    const val PLAN_EDITOR_SELECTED_START_DATE = "plan_editor_selected_start_date"
    const val PLAN_EDITOR_SELECT_START_DATE_BUTTON = "plan_editor_select_start_date_button"
    const val PLAN_TIME_PICKER = "plan_time_picker"
    const val PLAN_TIME_PICKER_CONFIRM = "plan_time_picker_confirm"
    const val PLAN_TIME_PICKER_CANCEL = "plan_time_picker_cancel"
    const val PLAN_START_DATE_PICKER = "plan_start_date_picker"
    const val PLAN_START_DATE_PICKER_CONFIRM = "plan_start_date_picker_confirm"
    const val PLAN_START_DATE_PICKER_CANCEL = "plan_start_date_picker_cancel"
}
